[package]
name = "rust-api"
version = "0.1.0"
authors = ["Tim Wheeler <tim@timwheeler.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
serde = "1.0.117"
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
